--- a/.github/workflows/terratest.yaml
+++ b/.github/workflows/terratest.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        terraform: ['1.3.7']
+        terraform: ['1.5.7', '1.7.3']
     steps:
       -  uses: actions/checkout@master
       -  uses: hashicorp/setup-terraform@v1
@@ -38,15 +38,17 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        terraform: ['1.3.7']
+        terraform: ['1.5.7', '1.7.3']
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.19'
+          go-version: '1.22'
+          go-version-file: tests/go.mod
+          cache-dependency-path: tests/go.sum
 
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
@@ -56,17 +58,12 @@ jobs:
         run: >
           wget https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip -O /tmp/terraform.zip &&
           sudo unzip -d /tmp/ /tmp/terraform.zip &&
-          sudo mv /tmp/terraform /usr/local/bin/
+          sudo mv /tmp/terraform /usr/local/bin/ 
+
+      - name: Start Localstack
+        run: docker compose up -d
 
       - name: Terratest
-        env:
-          GOPATH: /home/runner/work/terraform-aws-vpc-peering/go
-          TF_VAR_aws_peer_access_key: ${{ secrets.TF_VAR_aws_peer_access_key }}
-          TF_VAR_aws_peer_secret_key: ${{ secrets.TF_VAR_aws_peer_secret_key }}
-          TF_VAR_aws_this_access_key: ${{ secrets.TF_VAR_aws_this_access_key }}
-          TF_VAR_aws_this_secret_key: ${{ secrets.TF_VAR_aws_this_secret_key }}
-        run: >
-          go mod init github.com/grem11n/terraform-aws-vpc-peering &&
-          go mod tidy &&
-          echo 'package main' > main.go &&
+        run: |
+          cd test
           go test -v -timeout=30m ./...
