--- a/.github/workflows/terratest.yaml
+++ b/.github/workflows/terratest.yaml
@@ -66,4 +66,4 @@ jobs:
       - name: Terratest
         run: |
           cd test
-          go test -v -timeout=30m ./...
+          go test -v -timeout=30m test/...
