--- a/.github/workflows/terratest.yaml
+++ b/.github/workflows/terratest.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        terraform: ['1.5.7', '1.7.3']
+        terraform: ['1.5.7', '1.8.4']
     steps:
       -  uses: actions/checkout@master
       -  uses: hashicorp/setup-terraform@v1
@@ -43,7 +43,6 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
           go-version-file: tests/go.mod
           cache-dependency-path: tests/go.sum
 
@@ -64,6 +63,6 @@ jobs:
         run: docker compose up -d
 
       - name: Terratest
+        working-directory: ./test
         run: |
-          cd test
           go test -v -timeout=30m ./...
